# tg20hack

./: README.md
crypto/backup_service/: README.md  writeup.md
crypto/backup_service/src/client/: Cargo.toml
crypto/backup_service/src/client/src/: encrypt_files.py  encrypt_files_output.txt  main.rs
crypto/backup_service/src/client/src/files/: flag.txt  gibberish_1.txt  gibberish_10.txt  gibberish_11.txt  gibberish_12.txt  gibberish_2.txt  gibberish_3.txt  gibberish_4.txt  gibberish_5.txt  gibberish_6.txt  gibberish_7.txt  gibberish_8.txt  gibberish_9.txt
crypto/backup_service/src/server/: Cargo.toml
crypto/backup_service/src/server/src/: main.rs
crypto/backup_service/src/writeup/: .gitignore  Cargo.toml
crypto/backup_service/src/writeup/src/: main.rs  sm4.rs
crypto/backup_service/src/writeup/src/files/: hash.txt
crypto/crypto_vm/: README.md  flag.txt  writeup.md
crypto/n00b1/: README.md  flag.txt  writeup.md
crypto/n00b2/: README.md  flag.txt  writeup.md
crypto/n00b3/: README.md  flag.txt  writeup.md
crypto/n00b4/: README.md  flag.txt  writeup.md
crypto/n00b5/: README.md  flag.txt  writeup.md
crypto/n00b6/: README.md  flag.txt  writeup.md
crypto/playfair/: README.md  flag.txt  writeup.md
crypto/post_quantum_crypto/: README.md  flag.txt  writeup.md
crypto/ransomware_part_1/: README.md  flag.txt  writeup.md
crypto/ransomware_part_2/: README.md  flag.txt  writeup.md
forensics/kompromat/: README.md  flag.txt  writeup.md
forensics/memeories/: README.md  flag.txt  writeup.md
misc/poke/: README.md  (+2 more)
tutorial/: tutorial_introduction.md
(+544 files in other folders)
