[package]
name = "server"
version = "0.1.0"
authors = ["Nikolai Magnussen <nikolai@magnussen.tf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
