[package]
name = "writeup"
version = "0.1.0"
authors = ["Nikolai Magnussen <nikolai@magnussen.tf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
blake2 = "0.8"
rand = "0.7"
rand_hc = "0.2"
num_cpus = "1.0"
